--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 5000
 MONGO_DB = "mongodb+srv://kenanalgul:kenanbaba123@cluster0.ez4dv2a.mongodb.net/SocialMedia?retryWrites=true&w=majority"
+JWT_KEY = "MERN"
